<resources>

    <string name="app_name">Telemetría</string>
    <string name="form">Formulario</string>
    <string name="requiered_field">*Campo requerido</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="rep_password">Repetir Contraseña</string>
    <string name="save">Guardar</string>
    <string name="pasword_error">Las contraseñas no son iguales</string>
    <string name="email_error">debe digitar nombre y correo electronico</string>
    <string name="name">Nombre</string>
    <string name="phoneNumber">Número telefónico</string>
    <string name="data_Error">Debe completar todos los datos</string>
    <string name="info_registrarse">¿No tienes Cuenta? REGISTRARSE click Aqui.</string>
    <string name="logout_menu">Cerrar Sesión</string>
    <string name="loginTitle">Introduca sus datos de Usuario</string>
    <string name="UserEmailHint">Email de Usuario</string>
    <string name="UserPasswordHint">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="fail_user_password">Usuario y contraseña invalidos</string>
    <string name="empty" />
    <string name="password6digit">contraseña de minimo 6 digitos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">"Nombre de Usuario"</string>
    <string name="nav_header_subtitle">"Email de Usuario"</string>

    <string name="info_Equip">Informacion del Equipo</string>
    <string name="contact">Contacto:</string>
    <string name="phone_contact">Telefono de contacto:</string>
    <string name="address">Direccion:</string>
    <string name="add_Equip">Agrega Equipo</string>
    <string name="id_equip">ID Equipo:</string>
    <string name="input_NameAndLastname">Ingrese Nombre y Apellido del contacto principal</string>
    <string name="input_cellNumber">Ingrese un Numero celular del contacto</string>
    <string name="input_Address">Ingrese una direccion de instalación</string>
    <string name="input_ID">*CAMPO OBLIGATORIO: Ingrese el ID del equipo (Nombre que identifica al Equipo en la base de datos)</string>
    <string name="count_dispensation">Contador de bebidas:</string>
    <string name="input_dispensation_counter">ingrese la cantidad de bebidas dispensadas a la fecha</string>
    <string name="add_image">Agregar imagen</string>
    <string name="description">Descripcion:</string>
    <string name="input_description">Ingrese otros datos como contactos adicionales, horarios o detalles del contrato</string>
    <string name="title_new_equip">Ingrese la informacion del Nuevo Equipo</string>
    <string name="units_month">Bebidas en el mes</string>
    <string name="units_day">Bebidas hoy</string>
    <string name="equip">Equipo</string>
    <string name="add_equip">Agregar Equipo</string>
    <string name="phone">telefono</string>
    <string name="units_last_month">unidades mes anterior</string>
    <string name="units_last_day">unidades ayer</string>
    <string name="total_units">total unidades</string>
    <string name="units_today">unidades hoy</string>
    <string name="total_units_dispensed">total unidades dispensadas</string>
    <string name="google">GOOGLE</string>
    <string name="digite_nombre">digite nobre ID del equipo a ELIMINAR</string>
    <string name="eliminar">ELIMINAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="No_Existe">No Existe</string>
    <string name="Desea_eliminar_a">\"Desea eliminar a \"</string>
    <string name="aceptar">aceptar</string>
    <string name="Equipo_Eliminado">Equipo Eliminado</string>
    <string name="cancelar">cancelar</string>
    <string name="recordar">"Recordar "</string>
    <string name="user_register_ok">Usuario registrado correctamente</string>
    <string name="bad_write_Email">El correo esta mal escrito</string>
    <string name="user_not_exist">No existe el usario</string>
    <string name="user_already_exists">El usuario ya existe</string>
    <string name="user_auth_firebase_ok">\" Usuario autenticado correctamente por firebase Auth\"</string>
    <string name="equipment_added_successfully">Equipo agregado a Firebase correctamente</string>
    <string name="equipment_not_added">ERROR Equipo NO agregado a Firebase</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="configurations">Configuraciones</string>
    <string name="device_list">lista de equipos</string>
    <string name="add_device">Agregar Equipo</string>
    <string name="delete_device">Borrar Equipo</string>
    <string name="search_image">Buscar imagen</string>
    <string name="add_image_to_continue">Agregue o capture una imagen para continuar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Mapas</string>
    <string name="list">lista</string>
    <string name="mostar_lista_dispensaciones">Mostar lista</string>


</resources>