<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".AgregarEquipoFragment">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_new_equip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/input_NameAndLastname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/input_cellNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_contact"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/input_Address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/input_ID">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_equip"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/input_dispensation_counter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/count_dispensation"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/input_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/take_picture_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/add_image_to_continue"
        app:srcCompat="@drawable/ic_baseline_camera" />

    <Button
        android:id="@+id/buscar_imagen_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_image_to_continue"
        android:textColor="@color/Verde_500" />

    <Button
        android:id="@+id/guardar_equipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.willvargas.telemetria_esp8266.ui.MapsFragment"
        android:layout_width="0dp"
        android:layout_height="400dp" />


</LinearLayout>
</ScrollView>