<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".equipoFragment">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_Equip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutIz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo">

        <TextView
            android:id="@+id/textViewTitleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_equip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitlePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_contact"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleLastMonthCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/units_last_month"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleMonthCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/units_month"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleLastDayCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/units_last_day"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleDayCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/units_today"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_units_dispensed"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo">

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_equip" />

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <TextView
            android:id="@+id/textViewLastMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units_last_month" />

        <TextView
            android:id="@+id/textViewMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units_month" />

        <TextView
            android:id="@+id/textViewLastDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units_last_day" />

        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units_day" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_units" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imagenGrafico"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_graficas_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutIz" />

    <ImageView
        android:id="@+id/imagenEquipo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/empty"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenGrafico" />


    <TextView
        android:id="@+id/textViewTitleNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenEquipo" />

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleNote" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>