<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_agregarEquipoFragment"
            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/add_Equip" />

        <item
            android:id="@+id/nav_equipoFragment"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/id_equip" />

        <item
            android:id="@+id/nav_borrarEquipoFragment"
            android:icon="@drawable/ic_baseline_delete_forever_24"
            android:title="@string/eliminar" />


    </group>






</menu>