<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_listFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.willvargas.telemetria_esp8266.Activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.willvargas.telemetria_esp8266.Activities.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.willvargas.telemetria_esp8266.Activities.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_listFragment"
        android:name="com.willvargas.telemetria_esp8266.ui.list.ListFragment"
        android:label="lista de equipos"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.willvargas.telemetria_esp8266.DetailFragment"
        android:label="DetailFragment" >
        <argument
            android:name="equipo"
            app:argType="com.willvargas.telemetria_esp8266.data.server.EquiposServer" />
    </fragment>
</navigation>